Copyright © 2009 CNRS
Copyright © 2009-2023 Inria.  All rights reserved.
Copyright © 2009-2013 Université Bordeaux
Copyright © 2009-2011 Cisco Systems, Inc.  All rights reserved.
Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 3.0.0
-------------
* API
  + hwloc_get_type_depth_with_attr() generalizes hwloc_get_type_depth() by
    using object attributes to disambiguate multiple levels with same type.
    - hwloc_type_sscanf_as_depth() is deprecated in favor of
      hwloc_type_sscanf() followed by hwloc_get_type_depth_with_attr().
  + hwloc_obj_attr_snprintf() now displays KiB/MiB/GiB/TiB units for sizes.
  + The verbose attribute of hwloc_obj_type/attr_snprintf() is replaced
    by flags, where value 1 keeps the same meaning as in hwloc 2.x.
  + PCI domains are now always 32bits.
  + The "programming interface" of PCI devices is now exposed
    in PCI object attributes.
  + The OS device "type" attribute is now a bitmask.
    - "Block" OS devices are now "Storage" (for actual Block devices)
      and/or "Memory" (for Linux DAX and CXL devices, etc).
    - Some "CoProcessors" are also "GPUs" (e.g. CUDA devices),
      and some GPUs are also CoProcessors (e.g. RSMI).
    - "OpenFabrics" devices are now also "Network".
    - BXI interfaces are now "Network" instead of "OpenFabrics".
    - See "OS devices" in the documentation for details.
  + The "Backend" info attribute of OS devices is now in the topology
    root object together with other backends.
  + The array and count of info attributes are now embedded in the new
    struct hwloc_infos_s.
    - hwloc_infos_s structures may be modified with hwloc_modify_infos().